--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -7,8 +7,12 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.2",
+    "github-markdown-css": "^5.8.1",
+    "marked": "^17.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
